New and Noteworthy
-----------------

1.2
----

1.1.2
----

* Change: Events are now internally stored in elem.$events rather than elem.events (due to a nasty bug relating to DOM 0 expandos).
* @href is now consistent in all browsers.
* Fixed the slideDown flickering bug.
* Having a \r endline in $("...") caused a never-ending loop.
* Fixed IE6 AJAX memory leak
* Fixed bug in pushStack, reporting an element at [0] in a jQuery object with length 0

1.1
-----

* Massive speed-ups (4x-10x) in the selector engine.
* You can now unbind event handlers from within themselves
* Added new .one( "type", fn ) method
* text(String) now escapes HTML
* Added attr(String,Function) to calculate the value
* Performming .click(), .blur(), .focus(), .submit() will actually trigger the browsers default action for those events.
* Added global settings for AJAX (in addition to timeout), use $.ajaxSetup() to modify them
* Implemented a better error handling for ajax requests. Exceptions caused by dropping connections are now handled, too.
* Improved event fixing (Opera provides event.srcElement, must ignore it if target is available; only create pageX if clientX is available)

* Fixed nth-child selectors to start on the right number
* jQuery is no longer destructive. Doing var a = $("a"); a.find("span"); does not change the original "a" variable.
* Fixed synchronous requests
* Fixed ID with context selectors (eg. div #id doesn't ignore "div" anymore)

* Fixed docs for html(): Now mentions that is not available for XML documents
* Improved AJAX docs (eg. more examples for $.ajax)
* Documented filter(Function), a very powerful approach for custom filtering
* Improved docs for FX module, merging method descriptions and marking optional arguments
* Improved docs for append, prepend, before and after, merging the three pairs into one
* Improved show/hide animations to show only hidden and hide only visible elements

* Removed .oneEvent() and .unEvent() helper methods.